--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,17 @@ ament_target_dependencies(velocity_setpoint_converter
   "geometry_msgs"
 )
 
+add_executable(path_converter src/path_converter.cpp)
+ament_target_dependencies(path_converter
+  "YARP"
+  "rclcpp"
+  "nav_msgs"
+  "tf2_ros"
+  "tf2_msgs"
+  "tf2"
+  "nav2_util"
+)
+
 add_executable(CoM_trajectory_publisher src/CoM_trajectory_publisher.cpp)
 ament_target_dependencies(CoM_trajectory_publisher
   "nav_msgs"
@@ -229,6 +240,7 @@ install(TARGETS
   CoM_trajectory_publisher
   obstacle_script
   velocity_setpoint_converter
+  path_converter
   DESTINATION lib/${PROJECT_NAME})
 
 # install the launch directory
