--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(tf2_ros REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(nav_2d_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
@@ -26,7 +27,6 @@ find_package(nav2_common REQUIRED)
 find_package(nav2_core REQUIRED)
 find_package(nav2_costmap_2d REQUIRED)
 find_package(nav2_util REQUIRED)
-find_package(nav_msgs REQUIRED)
 find_package(pluginlib REQUIRED)
 
 include_directories(/opt/ros/humble/include/tf2_geometry_msgs)
@@ -163,6 +163,7 @@ ament_target_dependencies(path_converter
   "tf2_msgs"
   "tf2"
   "nav2_util"
+  "nav_2d_msgs"
 )
 
 add_executable(CoM_trajectory_publisher src/CoM_trajectory_publisher.cpp)
