--- a/param/ergoCub_nav2_DWB.yaml
+++ b/param/ergoCub_nav2_DWB.yaml
@@ -133,7 +133,7 @@ controller_server:
       sim_time: 2.0
       discretize_by_time: false
       time_granularity: 0.5
-      linear_granularity: 0.05
+      linear_granularity: 0.1  #0.05
       angular_granularity: 0.025
       include_last_point: true
 
