--- a/param/ergoCub_nav2_DWB.yaml
+++ b/param/ergoCub_nav2_DWB.yaml
@@ -59,15 +59,17 @@ controller_server:
   ros__parameters:
     use_sim_time: true
     controller_frequency: 5.0
-    min_x_velocity_threshold: 0.01
-    min_y_velocity_threshold: 0.01    #0.5
-    min_theta_velocity_threshold: 0.01
+    min_x_velocity_threshold: 0.001
+    min_y_velocity_threshold: 0.001    #0.5
+    min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.0
     speed_limit_topic: /speed_limit
     odom_topic: /estimated_odom   #/odometry
     progress_checker_plugin: progress_checker
     goal_checker_plugins:
     - goal_checker
+    checker_plugins:  #new
+    - progress_checker
     controller_plugins:
     - FollowPath
 
@@ -100,8 +102,8 @@ controller_server:
 
       # XYTheta Iterator
       vx_samples: 20
-      vy_samples: 8
-      vtheta_samples: 15
+      vy_samples: 10
+      vtheta_samples: 10
 
       # Kinematic Parameters
       max_vel_x: 1.0
@@ -139,10 +141,10 @@ controller_server:
 
       # Critics
       critics:
-      - RotateToGoal
-      - Oscillation
+      #- RotateToGoal
+      #- Oscillation
       - BaseObstacle
-      - GoalAlign
+      #- GoalAlign
       - PathAlign
       - PathDist
       - GoalDist
@@ -152,22 +154,22 @@ controller_server:
       PathAlign.scale: 32.0
       PathAlign.forward_point_distance: 0.1
 
-      GoalAlign.scale: 24.0
-      GoalAlign.forward_point_distance: 0.1
+      #GoalAlign.scale: 24.0
+      #GoalAlign.forward_point_distance: 0.1
 
       PathDist.scale: 32.0
 
-      Oscillation.oscillation_reset_angle: 0.2
-      Oscillation.oscillation_reset_dist: 0.05
-      Oscillation.oscillation_reset_time: -1.0
-      Oscillation.scale: 1.0
-      Oscillation.x_only_threshold: 0.05
+      #Oscillation.oscillation_reset_angle: 0.2
+      #Oscillation.oscillation_reset_dist: 0.05
+      #Oscillation.oscillation_reset_time: -1.0
+      #Oscillation.scale: 1.0
+      #Oscillation.x_only_threshold: 0.05
 
       GoalDist.scale: 24.0
 
-      RotateToGoal.scale: 32.0
-      RotateToGoal.slowing_factor: 5.0
-      RotateToGoal.lookahead_time: -1.0
+      #RotateToGoal.scale: 32.0
+      #RotateToGoal.slowing_factor: 5.0
+      #RotateToGoal.lookahead_time: -1.0
 
 #controller_server:
 #  ros__parameters:
@@ -417,60 +419,6 @@ global_costmap:
         inflation_radius: 1.0    #0.55
         inflate_unknown: false
         inflate_around_unknown: false
-
-#global_costmap:
-#  global_costmap:
-#    ros__parameters:
-#      update_frequency: 2.0
-#      publish_frequency: 1.0
-#      global_frame: map
-#      robot_base_frame: virtual_unicycle_base 
-#      use_sim_time: True
-#      robot_radius: 0.4
-#      resolution: 0.05
-#      trinary_costmap: true
-#      track_unknown_space: true
-#      plugins: 
-#      - static_layer
-#      - obstacle_layer
-#      - inflation_layer
-#      obstacle_layer:
-#        plugin: "nav2_costmap_2d::ObstacleLayer"
-#        enabled: True
-#        footprint_clearing_enabled: True
-#        combination_method: 0
-#        observation_sources: scan
-#        scan:
-#          topic: /filtered_scan_compensated #filtered_scan_compensated
-#          max_obstacle_height: 2.0  #2.0
-#          min_obstacle_height: -1.0
-#          clearing: True
-#          marking: True
-#          data_type: "LaserScan"
-#          raytrace_max_range: 20.0
-#          raytrace_min_range: 0.0
-#          obstacle_max_range: 6.0
-#          obstacle_min_range: 0.05
-#          inf_is_valid: False
-#      static_layer:
-#        plugin: "nav2_costmap_2d::StaticLayer"
-#        map_subscribe_transient_local: True
-#        enabled: True
-#        subscribe_to_updates: True
-#        transform_tolerance: 0.2
-#      inflation_layer:
-#        plugin: "nav2_costmap_2d::InflationLayer"
-#        cost_scaling_factor: 2.5    #3.0
-#        inflation_radius: 1.0    #0.55
-#        inflate_unknown: false
-#        inflate_around_unknown: true
-#      always_send_full_costmap: True
-#  global_costmap_client:
-#    ros__parameters:
-#      use_sim_time: true
-#  global_costmap_rclcpp_node:
-#    ros__parameters:
-#      use_sim_time: true
 
 map_server:
   ros__parameters:
