--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.ipp": "cpp"
     },
     "cmake.configureOnOpen": false
 }
