--- a/param/ergoCub_nav2_TEB.yaml
+++ b/param/ergoCub_nav2_TEB.yaml
@@ -4,7 +4,7 @@ bt_navigator:
     global_frame: map
     robot_base_frame: virtual_unicycle_base #projection   #base_link
     odom_topic: /estimated_odom
-    #default_bt_xml_filename: "navigate_w_replanning_and_recovery.xml"
+    default_bt_xml_filename: "navigate_w_replanning_only_if_goal_is_updated.xml" #"navigate_w_replanning_and_recovery.xml"
     bt_loop_duration: 10
     default_server_timeout: 40
     enable_groot_monitoring: True
