--- a/param/ergoCub_nav2_TEB.yaml
+++ b/param/ergoCub_nav2_TEB.yaml
@@ -85,22 +85,25 @@ controller_server:
     min_theta_velocity_threshold: 0.0001
     failure_tolerance: 0.0    #0.5
     odom_topic: /estimated_odom
-    progress_checker_plugin: "progress_checker"
-    goal_checker_plugins: ["general_goal_checker"] 
+    goal_checker_plugins:
+    - goal_checker
+    checker_plugins:  #new
+    - progress_checker
     controller_plugin_types: ["teb_local_planner::TebLocalPlannerROS"]  #only for TEB
     controller_plugins: ["FollowPath"]
 
     # Progress checker parameters
     progress_checker:
-      plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5   #0.5
+      plugin: nav2_controller::SimpleProgressChecker
+      required_movement_radius: 0.5
       movement_time_allowance: 20.0
-    
-    general_goal_checker:
-      stateful: True
-      plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.5
-      yaw_goal_tolerance: 2.1  #0.5 -> don't care about theta atm
+
+    # Goal checker parameters
+    goal_checker:
+      plugin: nav2_controller::SimpleGoalChecker
+      xy_goal_tolerance: 0.4
+      yaw_goal_tolerance: 0.5
+      stateful: true
 
     #TEB
     FollowPath:
