--- a/param/ergoCub_nav2_DWB.yaml
+++ b/param/ergoCub_nav2_DWB.yaml
@@ -5,7 +5,7 @@ bt_navigator:
     robot_base_frame: virtual_unicycle_base #projection   #base_link
     odom_topic: estimated_odom
     #default_bt_xml_filename: "/home/user1/ros2_workspace/install/ergocub_nav2_nodes/share/ergocub_nav2_nodes/replan_on_bool.xm" #"navigate_w_replanning_and_recovery.xml"
-    default_nav_to_pose_bt_xml: "/home/user1/ros2_workspace/install/ergocub_nav2_nodes/share/ergocub_nav2_nodes/replan_on_bool.xml"
+    default_nav_to_pose_bt_xml: "/home/user1/ros2_workspace/src/ergoCub_ros2/behavior_trees/navigate_to_pose_w_replanning_and_recovery_decorator.xml" #"/home/user1/ros2_workspace/install/ergocub_nav2_nodes/share/ergocub_nav2_nodes/replan_on_bool.xml"
     bt_loop_duration: 10
     default_server_timeout: 4000
     transform_tolerance: 0.3
