--- a/param/ergoCub_nav2_DWB.yaml
+++ b/param/ergoCub_nav2_DWB.yaml
@@ -361,8 +361,8 @@ local_costmap:
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 5.0   #should be higher than global_planner freq
-      publish_frequency: 5.0
+      update_frequency: 10.0  
+      publish_frequency: 10.0
       global_frame: map
       robot_base_frame: virtual_unicycle_base 
       use_sim_time: True
@@ -384,13 +384,13 @@ global_costmap:
         observation_sources: scan pointcloud_mark pointcloud_clear
         scan:
           topic: /filtered_scan_compensated
-          obstacle_max_range: 20.0
+          obstacle_max_range: 6.0
           obstacle_min_range: 0.1
-          raytrace_max_range: 25.0
+          raytrace_max_range: 8.2
           raytrace_min_range: 0.0
           max_obstacle_height: 2.0
           min_obstacle_height: 0.0
-          clearing: true
+          clearing: false
           marking: true
           data_type: "LaserScan"
           inf_is_valid: false
